fixed message at the bottom not showing on screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
+  margin-top: 30px;
 }
+
+.App h3 {
+  margin-bottom: 100px;
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -37,6 +43,12 @@
   }
 }
 
+
+.dogsideeye {
+  width: 200px;
+  height: 200px;
+}
+
 .footer {
   position: fixed;
   left: 0;
@@ -44,7 +56,7 @@
   width: 100%;
   color: white;
   text-align: center;
-  margin-bottom: 10px;
   font-family: 'Cursive', sans-serif;
   font-size: 1.0em;
+  margin-bottom: 20px;
 }
